# AgentFrame

./: .gitignore  ClipboardWatcher.cs  README.md  agent_chat.py  dev-server.py  dev.py  main.py  pyproject.toml
agentshell/: __init__.py  adapter.py  client.py
agentshell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentshell/examples/: anthropic_agent.py  groq_agent.py  openai_agent.py
backend/: .gitignore  requirements.txt  server.py
commands/: app.py  audio.py  clipboard.py  credentials.py  entity.py  files.py  keyboard.py  memory.py  mouse.py  network.py  notify.py  overlay.py  routine.py  screen.py  system.py  userdata.py  window.py
core/: _mtmd.py  crypto.py  logger.py  overlay.py  overlay_theme.py  registry.py  response.py  vision.py
desktop/: .gitignore  electron-main.js  package-lock.json  package.json  preload.js  tailwind.config.js  tsconfig.json
desktop/public/: index.html  package.json
desktop/src/: App.css  App.tsx  index.css
desktop/src/components/: ChatArea.css  ChatArea.tsx  CommandPanel.css  CommandPanel.tsx  Header.css  Header.tsx  InitialSetup.css  InitialSetup.tsx  InputArea.css  InputArea.tsx  MessageBubble.css  MessageBubble.tsx
listener/: AgentShellListener.csproj  Program.cs
listener/Events/: Agentevent.cs
listener/Hooks/: Keyboardhook.cs  Mousehook.cs  Windowhook.cs
memory/: Listenerclient.py  __init__.py  aggregator.py  indexer.py  store.py
mnt/user-data/outputs/agentshell/memory/: __init__.py
