[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name            = "agentshell"
version         = "0.1.0"
description     = "Agent-oriented PC control shell"
requires-python = ">=3.11"
dependencies    = [
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "pycaw>=20230407",
    "comtypes>=1.2.0",
    "pywin32>=306",
    "pywinauto>=0.6.8",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "groq>=0.9.0",
    "easyocr>1.7.0",
]

[project.scripts]
agentshell = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["commands*", "core*", "memory*"]
